--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html{
     width: 300px;
     height: 300px;
     background: radial-gradient( rgba(255, 255, 255, 0.385) , rgba(14, 14, 14, 0.445) ), 
-    url('/images/pexels-linda-gschwentner-11718584.jpg');
+    url('../images/pexels-linda-gschwentner-11718584.jpg');
    
     border: 1px solid ;
     background-size: cover;
